--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-intl": "^3.14.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spinners": "^0.13.8",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
