--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-intl": "^3.14.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
     "zod": "^3.23.8"
   },
