--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.3",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-spinners": "^0.13.8",
     "zod": "^3.23.8"
   },
