[FEATURE] Implement sign-up modal

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
