--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.2.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
+    "@prisma/client": "^5.15.0",
     "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
@@ -39,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
+    "prisma": "^5.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
