--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.19",
     "@prisma/client": "^5.15.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.3",
@@ -29,6 +30,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -41,8 +43,8 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
-    "prisma": "^5.15.0",
     "postcss": "^8",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
