--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.18",
     "next-intl": "^3.14.1",
     "react": "^18",
     "react-dom": "^18",
