--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-spinners": "^0.13.8",
+    "resend": "^3.2.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
