--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
