--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.3",
