[FEATURE] Implement create post

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.2.0",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.3",
