--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
