--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
