--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
+    "@types/jest-axe": "^3.5.9",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -69,6 +70,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-testing-library": "^6.3.0",
     "jest": "^29.7.0",
+    "jest-axe": "^9.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
