[UPGRADE] Dependencies (excluding next and eslint)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     "types": [
       "jest",
       "@testing-library/jest-dom"
-    ]
+    ],
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
