--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "prisma generate",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -70,7 +70,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-testing-library": "^6.4.0",
-    "husky": "^9.1.6",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-axe": "^9.0.0",
     "jest-environment-jsdom": "^29.7.0",
