--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "14.2.16",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^3.25.1",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
